force-app/main/default/objects/LLC_BI__Rate__c/LLC_BI__Rate__c.object-meta.xml
<CustomObject>
    <description>Current Rates for financial indices.</description>
    <label>Rate</label>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>