force-app/main/default/objects/LLC_BI__Rate__c/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active</description>
    <inlineHelpText>Active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>