force-app/main/default/objects/LLC_BI__Rate__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>