force-app/main/default/objects/LLC_BI__Rate__c/fields/LLC_BI__Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index__c</fullName>
    <description>Index</description>
    <inlineHelpText>Index</inlineHelpText>
    <label>Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>