force-app/main/default/objects/LLC_BI__Rate__c/fields/LLC_BI__Modification_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Modification_Schedule__c</fullName>
    <description>Modification Schedule</description>
    <inlineHelpText>Please enter a Modification Schedule</inlineHelpText>
    <label>Modification Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>365</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>