force-app/main/default/objects/LLC_BI__Rate__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Active__c</columns>
    <columns>LLC_BI__Index__c</columns>
    <columns>LLC_BI__Current_Value__c</columns>
    <columns>LLC_BI__Description__c</columns>
    <columns>LLC_BI__Effective_Date__c</columns>
    <columns>LLC_BI__External_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>